--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':youtime', ':p0971_2servicebindclient', ':p0972_2servicebindserver'
+include ':youtime', ':p0971_2servicebindclient', ':p0972_2servicebindserver', ':p0981_servicebindinglocal', ':p1011_contentprovider'
